compilers/ID/cool/regression/BASE_semanttest/break3.cl.stderr
./BASE_semanttest/break3.cl:4: Redefinition of basic class Object.
./BASE_semanttest/break3.cl:8: Redefinition of basic class Int.
./BASE_semanttest/break3.cl:12: Redefinition of basic class Bool.
./BASE_semanttest/break3.cl:16: Redefinition of basic class String.
Compilation halted due to static semantic errors.
